app-mcp/service-mcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcp-server-everything
  namespace: mcp-server
spec:
  selector:
    app: mcp-server-everything
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
