app-mcp/http-route-mcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-http-route
  namespace: mcp-server
spec:
  parentRefs:
  - name: prod-web
    namespace: ingress-gateway
  hostnames:
  - "mcp.travels.sandbox126.opentlc.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mcp-server-everything
      port: 80
